--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,64 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+body {
+  background-color: #fff;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+
+  font-family: 'Montserrat', sans-serif;
+  margin: 24px 24px auto 24px;
+}
+button {
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  height: 40px;
+  background-color: #4e75ff;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+}
+button:hover,
+button:focus {
+  background-color: #404bbf;
+}
+
+
+h2 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+}
+.item {
+  background-color: #f6f6fe;
+  border-radius: 8px;
+  padding: 16px;
+  width: 392px;
+  margin-bottom: 24px;
+}
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+/* task 1 */
+.field{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.field span{
+  background-color: lightblue;
+    padding: 4px 8px;
+    border: 1px solid #aaa;
+}
+
+/* task 2 */
