--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,21 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
-
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
 body {
   background-color: #fff;
   font-weight: 400;
@@ -65,15 +47,105 @@ ol {
   padding: 0;
 }
 /* task 1 */
-.field{
+
+
+.main-container {
   display: flex;
   flex-direction: column;
+  gap: 32px;
+  margin-left: 156px;
+  margin-top: 36px;
+}
+
+.timer {
+  display: flex;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+}
+
+.value {
+  text-align: center;
+}
+
+.input-container {
+  display: flex;
   gap: 8px;
 }
-.field span{
-  background-color: lightblue;
-    padding: 4px 8px;
-    border: 1px solid #aaa;
+
+#datetime-picker {
+  padding: 8px 0 8px 16px;
+  font-size: 16px;
+  line-height: 1.5;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+}
+
+#datetime-picker:hover {
+  border: 1px solid #000;
+  background: #fff;
+}
+
+#datetime-picker:active {
+  border: 1px solid #4e75ff;
+}
+#datetime-picker:disabled {
+  background: #fafafa;
+}
+
+.input-container button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+  background: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #fff;
+}
+
+.input-container button:hover {
+  background: #6c8cff;
+  color: #fff;
+}
+
+.input-container button:disabled {
+  background: #cfcfcf;
+  color: #808080;
+}
+
+.value {
+  font-size: 40px;
+  line-height: 1.2;
+}
+
+.label {
+  text-transform: uppercase;
 }
 
 /* task 2 */
+.form{
+  width: 360px;
+  display: block;
+  gap:
+}
+.form button{
+  width: 360px;
+}
+.form label{
+  margin-bottom: 16px;
+}
+.form fieldset{
+  margin-bottom: 24px;
+}
